--- a/POS2_ipynb_txt.ipynb
+++ b/POS2_ipynb_txt.ipynb
@@ -21,10 +21,21 @@
     },
     "colab": {
       "name": "POS2.ipynb.txt",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ashwaniashu29/NLP/blob/main/POS2_ipynb_txt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -44,7 +55,7 @@
         "import numpy as np\n",
         "import os"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -56,8 +67,65 @@
         "import spacy \n",
         "nlp = spacy.load(\"en_core_web_sm\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive"
+      ],
+      "metadata": {
+        "id": "7MRa8hn2fPJl"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive.mount('/content/gdrive')"
+      ],
+      "metadata": {
+        "id": "hDOpIVctfR0J",
+        "outputId": "d34debe1-4f10-435d-9a2e-5a817e8d83c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls \"/content/gdrive/My Drive/ML/NLP\""
+      ],
+      "metadata": {
+        "id": "ZJvHCzYjgAJw",
+        "outputId": "39592c39-e78b-4475-ef69-288961df0057",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Samsung.txt\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -74,23 +142,26 @@
         "id": "q1pr6bbsVAKb"
       },
       "source": [
-        "con=open(\"../data/Samsung.txt\",'r', encoding=\"utf-8\")\n",
+        "con=open(\"/content/gdrive/My Drive/ML/NLP/Samsung.txt\",'r', encoding=\"utf-8\")\n",
         "samsung_reviews=con.read()\n",
         "con.close()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "f4GyRJMEVAKb",
-        "outputId": "29fcc27e-8558-4e67-bec3-b677797f4601"
+        "outputId": "3350cb35-5015-4688-d148-917e5c8544be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "len(samsung_reviews.split(\"\\n\"))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,10 +170,8 @@
               "46355"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
@@ -119,12 +188,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "bPT-wYC2VAKd",
-        "outputId": "93ff4281-69f0-4cfc-b686-a64e9cf439ff"
+        "outputId": "e166c90f-9b62-45f7-cb99-6761441bc45c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "samsung_reviews.split(\"\\n\")[0:4]"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,10 +208,8 @@
               " 'It works good but it goes slow sometimes but its a very good phone I love it']"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -161,7 +231,7 @@
         "review1=samsung_reviews.split(\"\\n\")[0]\n",
         "review1=nlp(review1)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -177,18 +247,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "gOCZxFp_VAKh",
-        "outputId": "1465e5eb-d533-42dc-e890-c76dfa65d589"
+        "outputId": "4bda69ac-45a8-4ceb-a597-3958414b5f95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "for tok in review1[0:10]:\n",
         "    print(tok.text,\"---\",tok.lemma_,\"---\",tok.pos_)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "I --- I --- PRON\n",
+            "I --- -PRON- --- PRON\n",
             "feel --- feel --- VERB\n",
             "so --- so --- ADV\n",
             "LUCKY --- lucky --- ADJ\n",
@@ -198,8 +272,7 @@
             "this --- this --- DET\n",
             "used --- use --- VERB\n",
             "( --- ( --- PUNCT\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
